--- a/package.json
+++ b/package.json
@@ -21,20 +21,18 @@
     "buffer": "^6.0.3",
     "ethereumjs-util": "^7.1.5",
     "ethers": "^5.6.9",
+    "next": "^12.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
     "recharts": "^2.1.13",
     "stream": "^0.0.2",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "eslintConfig": {
     "extends": [
