--- a/package.json
+++ b/package.json
@@ -26,13 +26,16 @@
     "react-dom": "^18.2.0",
     "recharts": "^2.1.13",
     "stream": "^0.0.2",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test" : "jest"
   },
   "eslintConfig": {
     "extends": [
