--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "buffer": "^6.0.3",
     "ethereumjs-util": "^7.1.5",
     "ethers": "^5.6.9",
+    "jszip": "^3.10.1",
     "next": "^12.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -35,7 +36,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test" : "jest"
+    "test": "jest"
   },
   "eslintConfig": {
     "extends": [
