--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ethers": "^5.6.9",
     "jszip": "^3.10.1",
     "next": "^12.2.3",
+    "node-fetch": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.1.13",
